--- a/wp-content/themes/freefire/css/home.css
+++ b/wp-content/themes/freefire/css/home.css
@@ -21,6 +21,35 @@ body {
   /* border: 1px solid #eee; */
   background: rgba(255, 255, 255, 0.5);
   z-index: 999;
+  -webkit-transform: translate3d(0, 500px, 0);
+  transform: translate3d(0, 500px, 0);
+  -webkit-animation: arrive 0.3s ease-in-out 0.9s forwards;
+  animation: arrive 0.3s ease-in-out 0.9s forwards;
+  opacity: 0;
+}
+@-webkit-keyframes arrive {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 500px, 0);
+    transform: translate3d(0, 500px, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+@keyframes arrive {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 500px, 0);
+    transform: translate3d(0, 500px, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
 }
 .logo {
   display: block;
@@ -75,4 +104,8 @@ body {
   font-size: 10px;
   color: #ccc;
   line-height: 20px;
+}
+.footer a {
+  color: #ccc;
+  text-decoration: none;
 }
