文章页面添加loading

--- a/wp-content/themes/freefire/css/ihese.css
+++ b/wp-content/themes/freefire/css/ihese.css
@@ -30,7 +30,7 @@ html,body {
     margin: 0;
     /* overflow: hidden; */
 }
-.header,main,.footer {
+.header,main,footer {
   display: none;
 }
 pre {
