--- a/wp-content/themes/freefire/css/ihese.css
+++ b/wp-content/themes/freefire/css/ihese.css
@@ -371,3 +371,65 @@ a {
 .read-num b {
   color: #ff5e7d;
 }
+@media (max-width: 750px) {
+  .website-nav li,
+  .website-nav li a,
+  .contact-me li,
+  .contact-me li a {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .min-container {
+    padding: 0px 2rem;
+    width: auto;
+  }
+  .entry-content,
+  .entry-content p {
+    font-size: 1rem;
+    line-height: 1.35rem;
+  }
+  .article-list {
+    line-height: 3.333333rem;
+    height: 3.333333rem;
+  }
+  .artice-title {
+    width: 100%;
+    height: 3.333333rem;
+  }
+  .artice-ctime,
+  .artice-detail-title  .return-index,
+  .post-navigation {
+    display: none;
+  }
+  .artice-title .entry-title {
+    height: 3.333333rem;
+    line-height: 3.333333rem;
+  }
+  .artice-detail-title {
+    height: auto;
+  }
+  .artice-detail-title .entry-title {
+    font-size: 1.25rem;
+    font-weight: 500;
+    padding: 0.416667rem 0px;
+    height: auto;
+    line-height: 2.333333rem;
+  }
+  .entry-title a {
+    display: block;
+    width: 100%;
+    height: 3.333333rem;
+  }
+  .nav-next a, .nav-previous a {
+    width: 6.25rem;
+    height: 3.333333rem;
+    line-height: 3.333333rem;
+  }
+  .footer {
+    width: auto;
+    padding: 1.666667rem 1.666667rem;
+  }
+  .footer p:first-child {
+    display: none;
+  }
+｝
