--- a/wp-content/themes/freefire/css/ihese.css
+++ b/wp-content/themes/freefire/css/ihese.css
@@ -380,13 +380,13 @@ a {
     height: 1.5rem;
   }
   .min-container {
-    padding: 0px 2rem;
+    padding: 0px 1rem;
     width: auto;
   }
   .entry-content,
   .entry-content p {
     font-size: 1rem;
-    line-height: 1.35rem;
+    line-height: 1.75rem;
   }
   .article-list {
     line-height: 3.333333rem;
@@ -396,6 +396,7 @@ a {
     width: 100%;
     height: 3.333333rem;
   }
+  .header,
   .artice-ctime,
   .artice-detail-title  .return-index,
   .post-navigation {
@@ -409,11 +410,17 @@ a {
     height: auto;
   }
   .artice-detail-title .entry-title {
-    font-size: 1.25rem;
+    font-size: 1.333333rem;
     font-weight: 500;
     padding: 0.416667rem 0px;
     height: auto;
     line-height: 2.333333rem;
+  }
+  .artice-detail-time {
+    font-size: 0.833333rem;
+  }
+  .read-num {
+    color: #bbbbbb;
   }
   .entry-title a {
     display: block;
@@ -428,6 +435,7 @@ a {
   .footer {
     width: auto;
     padding: 1.666667rem 1.666667rem;
+    font-size: 0.5rem;
   }
   .footer p:first-child {
     display: none;
