--- a/wp-content/themes/freefire/css/ihese.css
+++ b/wp-content/themes/freefire/css/ihese.css
@@ -382,6 +382,7 @@ a {
   .min-container {
     padding: 0px 1rem;
     width: auto;
+    margin-top: 0.416667rem;
   }
   .entry-content,
   .entry-content p {
