添加文章二维码显示

--- a/wp-content/themes/freefire/css/ihese.css
+++ b/wp-content/themes/freefire/css/ihese.css
@@ -443,3 +443,13 @@ a {
     display: none;
   }
 }
+.article-code {
+  width: 8.333333rem;
+  height: 8.333333rem;
+  margin: 0.416667rem auto;
+  text-align: center;
+  color: #cccccc;
+}
+.article-code img {
+  width: 100%;
+}
