--- a/wp-content/themes/freefire/css/ihese.css
+++ b/wp-content/themes/freefire/css/ihese.css
@@ -450,6 +450,13 @@ a {
   text-align: center;
   color: #cccccc;
 }
+.article-code-info {
+  width: 100%;
+  height: 2.083333rem;
+  line-height: 2.083333rem;
+  font-size: 0.5rem;
+  text-align: center;
+}
 .article-code img {
   width: 100%;
 }
