--- a/wp-content/themes/freefire/css/ihese.css
+++ b/wp-content/themes/freefire/css/ihese.css
@@ -393,88 +393,7 @@ a {
 .baidu-content {
   display: none;
 }
-@media (max-width: 950px) {
-  .website-nav li,
-  .website-nav li a,
-  .contact-me li,
-  .contact-me li a {
-    width: 1.5rem;
-    height: 1.5rem;
-  }
-  .min-container {
-    padding: 0px 1rem;
-    width: auto;
-    margin-top: 0.416667rem;
-  }
-  .entry-content,
-  .entry-content p {
-    font-size: 1rem;
-    line-height: 1.75rem;
-  }
-  .article-list {
-    line-height: 3.333333rem;
-    height: 3.333333rem;
-  }
-  .artice-title {
-    width: 100%;
-    height: 3.333333rem;
-  }
-  .header,
-  .artice-ctime,
-  .artice-detail-title  .return-index,
-  .post-navigation,
-  .artice-detail-title .weixin-code {
-    display: none;
-  }
-  .artice-title .entry-title {
-    height: 3.333333rem;
-    line-height: 3.333333rem;
-  }
-  .artice-detail-title {
-    height: auto;
-  }
-  .artice-detail-title .entry-title {
-    font-size: 1.333333rem;
-    font-weight: 500;
-    padding: 0.416667rem 0px;
-    height: auto;
-    line-height: 2.333333rem;
-  }
-  .artice-detail-time,
-  time {
-    font-size: 1.2rem;
-  }
-  .read-num {
-    color: #bbbbbb;
-  }
-  .entry-title a {
-    display: block;
-    width: 100%;
-    height: 3.333333rem;
-  }
-  .nav-next a, .nav-previous a {
-    width: 4.166667rem;
-    height: 2.916667rem;
-    line-height: 2.916667rem;
-  }
-  .footer {
-    width: auto;
-    padding: 1.666667rem 2.5rem;
-    font-size: 0.5rem;
-  }
-  .footer p:first-child {
-    display: none;
-  }
-  .baidu-content {
-    display: block;
-    margin-top: 1.25rem;
-    overflow: hidden;
-  }
-  .baidu-content div,
-  .baidu-content iframe {
-    width: 100%!important;
-  }
-}
+
 .article-code {
   width: 8.333333rem;
   height: 8.333333rem;
@@ -622,4 +541,91 @@ a {
 .aboutme-content a {
   font-weight: 600;
   color: #f00;
+}
+
+@media (max-width: 950px) {
+  .website-nav li,
+  .website-nav li a,
+  .contact-me li,
+  .contact-me li a {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .min-container {
+    padding: 0px 1rem;
+    width: auto;
+    margin-top: 0.416667rem;
+  }
+  .entry-content,
+  .entry-content p {
+    font-size: 1rem;
+    line-height: 1.75rem;
+  }
+  .article-list {
+    line-height: 3.333333rem;
+    height: 3.333333rem;
+  }
+  .artice-title {
+    width: 100%;
+    height: 3.333333rem;
+  }
+  .header,
+  .artice-ctime,
+  .artice-detail-title  .return-index,
+  .post-navigation,
+  .artice-detail-title .weixin-code {
+    display: none;
+  }
+  .artice-title .entry-title {
+    height: 3.333333rem;
+    line-height: 3.333333rem;
+  }
+  .artice-detail-title {
+    height: auto;
+  }
+  .artice-detail-title .entry-title {
+    font-size: 1.333333rem;
+    font-weight: 500;
+    padding: 0.416667rem 0px;
+    height: auto;
+    line-height: 2.333333rem;
+  }
+  .artice-detail-time,
+  time {
+    font-size: 1.2rem;
+  }
+  .read-num {
+    color: #bbbbbb;
+  }
+  .entry-title a {
+    display: block;
+    width: 100%;
+    height: 3.333333rem;
+  }
+  .nav-next a, .nav-previous a {
+    width: 4.166667rem;
+    height: 2.916667rem;
+    line-height: 2.916667rem;
+  }
+  .footer {
+    width: auto;
+    padding: 1.666667rem 2.5rem;
+    font-size: 0.5rem;
+  }
+  .footer p:first-child {
+    display: none;
+  }
+  .baidu-content {
+    display: block;
+    margin-top: 1.25rem;
+    overflow: hidden;
+  }
+  .baidu-content div,
+  .baidu-content iframe {
+    width: 100%!important;
+  }
+  .aboutme-content {
+    width: 100%;
+    line-height: 1.666667rem;
+  }
 }
